[package]
name = "no-break"
version = "0.1.1"
license = "Apache-2.0 OR LGPL-2.1-or-later"
readme = "README.md"
edition = "2021"
rust-version = "1.83"
repository = "https://github.com/vigna/no-break-rs"
description = "Typesafe extraction of continuation values from unbreakable control flows"
keywords = ["control-flow", "unbreakable", "never-type"]
categories = ["rust-patterns"]
authors = ["Sebastiano Vigna <sebastiano.vigna@gmail.com>"]
